# CodexPlusPlus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md
.github/workflows/: pr-build.yml
apps/codex-plus-launcher/: Cargo.toml
apps/codex-plus-launcher/src/: main.rs
apps/codex-plus-manager/: package-lock.json  package.json
apps/codex-plus-manager/src/: App.tsx  i18n-en.ts  presets.ts  styles.css
apps/codex-plus-manager/src-tauri/: tauri.conf.json
assets/inject/: pet-real-mouse-inject.js  renderer-inject.js  stepwise-inject.js
codex_session_delete/: cdp.py  cli.py  helper_server.py  launcher.py  storage_adapter.py
codex_session_delete/inject/: renderer-inject.js
crates/codex-plus-core/: Cargo.toml
crates/codex-plus-core/src/: ads.rs  app_paths.rs  assets.rs  bridge.rs  ccs_import.rs  cdp.rs  codex_sqlite.rs  diagnostic_log.rs  http_client.rs  launcher.rs  lib.rs  model_catalog.rs  paths.rs  plugin_marketplace.rs  protocol_proxy.rs  provider_import.rs  relay_config.rs  relay_environment.rs  relay_latency.rs  relay_switch.rs  routes.rs  settings.rs  update.rs  user_scripts.rs  watcher.rs  windows_integration.rs  zed_remote.rs
crates/codex-plus-core/tests/: ads.rs  bridge_routes.rs  cdp_bridge.rs  launcher.rs  (+5 more)
docs/architecture-analysis/: 01-架构设计.md  02-功能模型.md  03-codex模块功能分析.md
docs/release/: 20260602191421483_token统计历史恢复bridge发布说明.md
tests/: test_cdp.py  test_helper_server.py  test_launcher_cli.py  test_renderer_script.py  test_storage_adapter.py
tools/codex-wechat/: README.md  codex_wechat.py  config.example.json
(+8 files in other folders)
